--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 ﻿cmake_minimum_required(VERSION 3.15)
 
-project(IonEngine)
+project(IonEngine LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory("IonEngine")
-add_subdirectory("IonPlayground")
+add_subdirectory("IonEditor")
+add_subdirectory("IonPlayer")
