Bulk commit current progress

--- a/IonEngine/CMakeLists.txt
+++ b/IonEngine/CMakeLists.txt
@@ -5,7 +5,28 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/extern")
 
-add_library(IonEngine STATIC "source/IonEngine.cpp" "include/IonEngine.h" "include/IonEngine/extern/OpenGL.h" "include/IonEngine/extern/fmtlib.h" "include/IonEngine/Utility/Logger.h" "source/Utility/Logger.cpp" "include/IonEngine/Core.h" "include/IonEngine/Utility.h" "include/IonEngine/Application.h"  "source/Application.cpp" "include/IonEngine/Utility/Clock.h" "source/Utility/Clock.cpp" "include/IonEngine/Events.h" "include/IonEngine/Events/ApplicationEvents.h" "include/IonEngine/Events/WindowEvents.h" "include/IonEngine/Events/InputEvents.h" "source/Events/Events.cpp" "source/Events/ApplicationEvents.cpp" "source/Events/InputEvents.cpp" "source/Events/WindowEvents.cpp" "include/IonEngine/Input.h" "include/IonEngine/Events/InputEvents/KeyboardEvents.h" "include/IonEngine/Events/InputEvents/MouseEvents.h" "source/Events/InputEvents/KeyboardEvents.cpp" "source/Events/InputEvents/MouseEvents.cpp" "include/IonEngine/Window.h" "source/Window.cpp" "source/Platform/CrossPlatform/CrossPlatformWindow.cpp" "source/Platform/CrossPlatform/CrossPlatformInput.cpp")
+add_library(IonEngine STATIC 
+	"source/IonEngine.cpp"
+	"source/Application.cpp"
+	"source/Events.cpp"
+	"source/Input.cpp"
+	"source/LayerStack.cpp"
+	"source/Window.cpp"
+	"source/Events/ApplicationEvents.cpp"
+	"source/Events/InputEvents.cpp"
+	"source/Events/WindowEvents.cpp"
+	"source/Events/InputEvents/KeyboardEvents.cpp"
+	"source/Events/InputEvents/MouseEvents.cpp"
+	"source/Graphics/Context.cpp"
+	"source/Graphics/Shader.cpp"
+	"source/Platform/API.cpp"
+	"source/Platform/Input/GLInput.cpp"
+	"source/Platform/Window/GLWindow.cpp"
+	"source/Platform/OpenGL/OpenGLContext.cpp"
+	"source/Platform/OpenGL/OpenGLShader.cpp"
+	"source/Utility/Clock.cpp"
+	"source/Utility/Logger.cpp"
+ "include/IonEngine/ImGuiLayer.h" "include/IonEngine/Platform/OpenGL/OpenGLImGuiLayer.h" "source/Platform/OpenGL/OpenGLImGuiLayer.cpp" "source/ImGuiLayer.cpp" "include/IonEngine/Graphics/Buffer.h" "source/Graphics/Buffer.cpp" "include/IonEngine/Platform/OpenGL/OpenGLBuffer.h" "source/Platform/OpenGL/OpenGLBuffer.cpp" "include/IonEngine/Graphics/Renderer.h")
 target_include_directories(IonEngine PUBLIC "${CMAKE_CURRENT_LIST_DIR}/include" ${BULLET3_INCLUDE_DIRECTORIES})
 target_link_libraries(IonEngine PUBLIC 
 	glfw 
